TC-284 #comment fix spacing #ready

--- a/web/themes/custom/jcc_base/src/sass/components/text/_blockquote.scss
+++ b/web/themes/custom/jcc_base/src/sass/components/text/_blockquote.scss
@@ -1,5 +1,5 @@
 .blockquote {
-  padding: 60px 0;
+  padding: 60px 0 0 0;
   position: relative;
 
   p {
